--- a/styles.css
+++ b/styles.css
@@ -76,3 +76,47 @@ th {
 .mdc-delete {
     background: #f44336 !important;
 }
+
+header {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 28px;
+    background: #404040;
+    white-space: nowrap;
+    color: white;
+    font-size: 14px;
+    font-family: Arial, Verdana, Geneva, Tahoma, sans-serif;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 3px 12px;
+    gap: 15px;
+}
+header .space {
+    width: calc(100% - 30px);
+}
+
+    header a {
+        color: #90caf9;
+        white-space: nowrap;
+    }
+
+        header a:hover {
+            color: #bbdefb;
+        }
+
+        header a:active {
+            color: #42a5f5;
+        }
+
+.mdc-text-field--outlined select.mdc-text-field__input {
+    cursor: pointer;
+}
+.mdc-text-field--outlined .mdc-text-field__input {
+    width: auto;
+    min-width: 214px;
+}
